# gq_chat_analytics

./: .gitignore  README.md  load_seed_data.py  pyproject.toml
gq_transformations/: .user.yml  dbt_project.yml  profiles.yml
gq_transformations/macros/: test_in_range.sql  test_is_positive_integer.sql  test_not_blank.sql
gq_transformations/models/whatsapp/: dim_date.sql  dim_hour.sql  dim_topic.sql  fact_chat.sql  fact_word_count.sql  report_animal_types.sql  report_member_rankings.sql  report_topic_rankings.sql  schema.yml
