[tool.poetry]
name = "chat-analytics"
version = "0.1.0"
description = "Analytics on chats from Geek Quest's Whatsapp and other forums"
authors = ["GQ"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dbt = "^1.0.0.37.18"
dbt-duckdb = "^1.8.1"
duckdb = "^1.0.0"
holidays = "^0.50"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.3"
pyright = "^1.1.366"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
